# PEA-Project

./: .gitignore  README.md
PEA/: CMakeLists.txt  PEA.sln  main.cpp
PEA/data/: graph_3.txt  graph_6.txt  graph_test.txt  graph_test_1.txt  graph_test_2.txt  graph_test_3.txt  graph_test_4.txt  graph_test_5.txt
PEA/inc/algorithms/: AlgorithmBase.hpp  BranchAndBound.hpp  BruteForce.hpp  DynamicProgramming.hpp  Genetic.hpp  SimulatedAnnealing.hpp  TabuSearch.hpp
PEA/inc/structures/: AdjacencyMatrix.hpp  Array.hpp  Instance.hpp  Path.hpp  Result.hpp  TestResult.hpp
PEA/inc/utils/: MatrixGenerator.hpp  MatrixReader.hpp  Menu.hpp  RandomGenerator.hpp  ResultWriter.hpp  TSPsolver.hpp  TestProvider.hpp  Timer.hpp
PEA/results/: brute-force.csv
PEA/results/part-1/: branch-and-bound.csv  dynamic-programming.csv  generate.py
PEA/results/part-2/: generate-errors.py  generate.py  simulated-annealing-errors.csv  simulated-annealing.csv  tabu-search-errors.csv  tabu-search.csv
PEA/results/part-3/: generate.py  genetic-crossover-invert.csv  genetic-crossover-swap.csv  genetic-invert-population100.csv  genetic-invert-population200.csv  genetic-invert-population300.csv  genetic-mutation-invert.csv  genetic-mutation-swap.csv  genetic-swap-population100.csv  genetic-swap-population200.csv  genetic-swap-population300.csv
PEA/src/algorithms/: BranchAndBound.cpp  BruteForce.cpp  DynamicProgramming.cpp  Genetic.cpp  SimulatedAnnealing.cpp  TabuSearch.cpp
PEA/src/structures/: AdjacencyMatrix.cpp  Array.cpp  Path.cpp
PEA/src/utils/: MatrixGenerator.cpp  MatrixReader.cpp  (+6 more)
(+5 files in other folders)
